yamls/port-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: portfoliowebsite
---
