yamls/port-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
      - naveengarg.dev
      - www.naveengarg.dev
      secretName: naveengarg-dev
  rules:
    - host: naveengarg.dev
      http:
        paths:
        - path: /
          backend:
            serviceName: portfolio-service
            servicePort: 80
    - host: www.naveengarg.dev
      http:
        paths:
        - path: /
          backend:
            serviceName: portfolio-service
            servicePort: 80
---
